From b6e308d (ephemeris):
========================

In scripts/run_prisim.py,

(*) Remove the downselection of only point sources in the GLEAM
catalog.

From 7c45a8e (ephemeris):
========================

In scripts/run_prisim.py,

(*) Fix bug in units of lst_init

From 8696533 (master), ba68704 (ephemeris):
==========================================

(*) Merge changes in branch master into branch ephemeris-tmp

From 31aeae9 (fov):
==================

In scripts/run_prisim.py,

(*) Determine Alt-Az positions from the pre-determined sources
(*) Rename visible to hemisphere and determine hemisphere ind by
finding all pre-determined source indices that lie in the hemisphere

From 070e616 (master):
=====================

In scripts/run_prisim.py,

(*) Pre-compute sources in sky model in FOV defined by ROI radius
(*) Use these sources to determine memory requirements instead of the
full sky model sources

From 378c269 (master):
=====================

In scripts/run_prisim.py,

(*) Import warnigns module
(*) Isuue warning instead of raising an exception when the code runs
into a chunking problem, and pause the code for diagnosis instead of
exiting

From 0f12ce0 (ephemeris):
========================

In scripts/run_prisim.py,

(*) Import warnings module
(*) Isuue warning instead of raising an exception when the code runs
into a chunking problem, and pause the code for diagnosis instead of
exiting

From 390baa4 (ephemeris):
========================

In prisim/examples/simparms/defaultparms.yaml,

(*) Remove parameter timeformat since JD has been adopted as the
standard format

In scripts/run_prisim.py,

(*) Remove use of timestamps and timestamps_JD explicitly as time
objects are maintained
(*) Determine time objects and LST information for all observing
modes
(*) Remove commented lines

In prisim/interferometry.py,

(*) Update docstring under class InterferometerArray on description
of attribute timestamp

From 81730e0 (ephemeris):
========================
